modified:   script-opts/gifgen.conf

--- a/script-opts/gifgen.conf
+++ b/script-opts/gifgen.conf
@@ -2,7 +2,7 @@
 fps=-1
 
 # Width of the resulting gif.
-width=680
+width=1920
 
 # Leave -1 to automatically determine height or set to customize.
 height=-1
@@ -11,25 +11,22 @@ height=-1
 extension=gif
 
 # Gif output directory. It supports mpv expansions: https://mpv.io/manual/master/
-outputDirectory=${path}/mpv-gifs
+outputDirectory=mpv-gifs
 
 # Set mode use to work with. Available 'gif', 'video' and 'all'.
 mode=gif
 
-# Set keybinding.
-key=g
-
 # Set start time key
-keyStartTime=""
+keyStartTime=g
 
 # Set end time key
-keyEndTime=""
+keyEndTime=Shift+g
 
 # Make gif keybinding
-keyMakeGif=""
+keyMakeGif=Ctrl+g
 
 # Make gif keybinding with subtitles
-keyMakeGifSub=""
+keyMakeGifSub=Ctrl+Shift+g
 
 # If adding subtitles and video is played by yt-dlp, this will be passed to yt-dlp to filter the language of the subtitles.
 ytdlpSubLang="zh.*"
