modified:   input.conf

--- a/input.conf
+++ b/input.conf
@@ -1,4 +1,7 @@
 # 鼠标左键单击切换暂停/播放
 MBTN_LEFT cycle pause
-# 鼠标左键双击全屏
-MBTN_LEFT_DBL cyclee fullscreen
+
+# 播放速度
++ add speed 0.1
+- add speed -0.1
+= set speed 1
